--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhKvnUW0nzAbVoCkvoVh6I",
+      "authorship_tag": "ABX9TyMBdRYCwo0b5b76UqdJgvRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +99,7 @@
         "id": "coHMpH2hQZif",
         "outputId": "e9714f42-3969-40f8-df95-b50ea7000657"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "OTPNm-GnJG3y",
         "outputId": "4cb286c5-9f02-4eb8-ddc4-8005195ee24a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,12 +168,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "year = int(input(\"enter the year \\n\"))\n",
+        "if (year % 100 ==0 ) and (year % 400 ==0):\n",
+        "# divide by 100 means century years and divide by 400 means leap year like 2000,4000)\n",
+        "  print(\"{} is a leap year\".format(year))\n",
+        "elif (year % 4 ==0)  and (year %100 !=0) :\n",
+        "  # if not divide by 100 means not a centuary year and divide by 4 is leap year\n",
+        "  print(\"{} is a leap year\".format(year))\n",
+        "else:\n",
+        "  print(\"{} is not a leap year\" .format(year))"
+      ],
       "metadata": {
-        "id": "txtjadU-jm2P"
+        "id": "txtjadU-jm2P",
+        "outputId": "66a54808-85ec-46a7-8378-04e45a8d64c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the year \n",
+            "1567\n",
+            "1567 is not a leap year\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -185,13 +209,6 @@
       ],
       "metadata": {
         "id": "2eFrCpSzlKW1"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "epBYJUkgpR8d"
       }
     },
     {
@@ -212,7 +229,7 @@
         "id": "pkFVKSRllMkB",
         "outputId": "0a5f6ff6-bcc4-40dd-82e3-9c2b2bce8bb7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,6 +240,161 @@
             "enter the first point of Y cordinate8\n",
             "enter the Second point of Y cordinate3\n",
             "The cartesian distance between two point is 4.898979485566356\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Write a Python Program to Find the Factorial of a Number."
+      ],
+      "metadata": {
+        "id": "ezefZJiY7gJB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"enter the number \\n\"))\n",
+        "factorial = 1\n",
+        "if num ==0 or num==1:\n",
+        "  print(\"factorial of number {} is 1\".format(num))\n",
+        "elif num <0 :\n",
+        "  print(\"factorial of number {} does not exist as the number is negative\".format(num))\n",
+        "else:\n",
+        "  for i in range(1,num+1):\n",
+        "    factorial = factorial *i\n",
+        "  print(\"factorial of number {} is {}\".format(num,factorial))"
+      ],
+      "metadata": {
+        "id": "k2BDhSk27pFu",
+        "outputId": "8adb8689-02b4-4b7b-9c2b-e4d32f1aa291",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "5\n",
+            "factorial of number 5 is 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Using recursion\n",
+        "number = int(input(\"enter the number \\n\"))\n",
+        "def factorial(number):\n",
+        "  if number==0 or number==1:\n",
+        "    return 1\n",
+        "  elif number >1:\n",
+        "    return number * factorial(number-1)\n",
+        "  else:\n",
+        "    return \"cant find the factorial as number is negative\"\n",
+        "end_ = factorial(number)\n",
+        "print(\"The factorial of number {} is {}\".format(number,end_))"
+      ],
+      "metadata": {
+        "id": "btckZHFo-Hwr",
+        "outputId": "ffe251f0-f2b6-4fd0-9df3-191b4ddb2694",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "7\n",
+            "The factorial of number 7 is 5040\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. Write a Python Program to Print the Fibonacci sequence.\n",
+        "\n",
+        "    0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, and so on."
+      ],
+      "metadata": {
+        "id": "sFwZS23mA6Vb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fibbonachi series\n",
+        "a,b = 0,1\n",
+        "for i in range(6):\n",
+        "  a,b = b,a+b\n",
+        "  print(a,end=',')"
+      ],
+      "metadata": {
+        "id": "CwQC-zNSD1EQ",
+        "outputId": "5cebbec8-b350-4000-fea0-3b17b1efc17b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1,1,2,3,5,8,"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(n):\n",
+        "    if n <= 1:\n",
+        "        return n\n",
+        "    else:\n",
+        "        return fibonacci(n-1) + fibonacci(n-2)\n",
+        "\n",
+        "# Test the function\n",
+        "num = int(input(\"Enter the number of terms in Fibonacci series: \"))\n",
+        "\n",
+        "if num <= 0:\n",
+        "    print(\"Please enter a positive integer.\")\n",
+        "else:\n",
+        "    print(\"Fibonacci series:\")\n",
+        "    for i in range(num):\n",
+        "        print(fibonacci(i), end=\" \")\n"
+      ],
+      "metadata": {
+        "id": "zL2qM7hqEZAS",
+        "outputId": "2228f468-2c2f-4032-bb71-94f6ad60e24a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of terms in Fibonacci series: 5\n",
+            "Fibonacci series:\n",
+            "0 1 1 2 3 "
           ]
         }
       ]
