--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBdRYCwo0b5b76UqdJgvRs",
+      "authorship_tag": "ABX9TyNYB7WbUBARnm3rn9VO3ByK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,6 +395,189 @@
             "Enter the number of terms in Fibonacci series: 5\n",
             "Fibonacci series:\n",
             "0 1 1 2 3 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8. Write a program that reads two numbers and tells you which one is\n",
+        "bigger"
+      ],
+      "metadata": {
+        "id": "eGdo35v-Rnav"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"enter the first number \\n \"))\n",
+        "num2 = int(input(\"enter the Second number \\n \"))\n",
+        "\n",
+        "if num1==num2:\n",
+        "  print(\"Both numbers are equal\")\n",
+        "elif num1>num2:\n",
+        "  print(\"{} is greater then the {} \".format(num1,num2))\n",
+        "else:\n",
+        "  print(\"{} is greater then the {} \".format(num2,num1))"
+      ],
+      "metadata": {
+        "id": "SD_ZkE9ZPyPP",
+        "outputId": "047df6d8-59f7-4dc2-f87d-90f4644adc26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first number \n",
+            " 98\n",
+            "enter the Second number \n",
+            " 21\n",
+            "98 is greater then the 21 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. Write a program that asks the user for three numbers and displays the\n",
+        "largest one."
+      ],
+      "metadata": {
+        "id": "lGuYb_TyTZVQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"enter the first  number \\n\"))\n",
+        "num2 = int(input(\"enter the second  number \\n\"))\n",
+        "num3 = int(input(\"enter the Third  number \\n\"))\n",
+        "\n",
+        "if num1 >num2 and num1>num3:\n",
+        "  print(\"{} is Largest of the three numbers\".format(num1))\n",
+        "elif num2>num1 and num2>num3:\n",
+        "  print(\"{} is Largest of the three numbers\".format(num2))\n",
+        "else:\n",
+        "  print(\"{} is largest of three numbers\".format(num3))"
+      ],
+      "metadata": {
+        "id": "X-gajha0Tk0w",
+        "outputId": "8103d200-bc73-4948-f49b-e7cbdc256a36",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first  number \n",
+            "12\n",
+            "enter the second  number \n",
+            "45\n",
+            "enter the Third  number \n",
+            "64\n",
+            "64 is largest of three numbers\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.  Write a program that reads a number and reports whether it is positive,\n",
+        "negative or zero."
+      ],
+      "metadata": {
+        "id": "snC5aJiZVDyK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter the number \\n\"))\n",
+        "if num==0:\n",
+        "  print(\"The above number is equal to zero\")\n",
+        "elif num>0:\n",
+        "  print(\"The above number is postive \")\n",
+        "else:\n",
+        "  print(\"The above number is negative\")\n"
+      ],
+      "metadata": {
+        "id": "Kgnp64ZpVFzt",
+        "outputId": "6b7a6671-a0f1-4e8f-89ba-dec116577e4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number \n",
+            "54\n",
+            "The above number is postive \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "11 .  Write a program that reads three numbers and tells you if they can be the\n",
+        "sides of a triangle (the sum of two sides must always be greater than the third\n",
+        "side) ."
+      ],
+      "metadata": {
+        "id": "Z698KDwJXW3U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "side1 = int(input(\"enter the first  number \\n\"))\n",
+        "side2 = int(input(\"enter the second  number \\n\"))\n",
+        "side3 = int(input(\"enter the Third  number \\n\"))\n",
+        "\n",
+        "# cheking condition\n",
+        "if side1 + side2 >=side3 and side2 + side3 >=side2 and side1 + side3 >= side2:\n",
+        "  print(\"These 3 side {},{},{} can form a triangle\" .format(side1,side2,side3))\n",
+        "else:\n",
+        "  print(\"These 3 side {},{},{} cant form a triangle\" .format(side1,side2,side3))\n",
+        ""
+      ],
+      "metadata": {
+        "id": "52cQY1eMXY6w",
+        "outputId": "c403b933-00d7-4b80-8a6a-fd94a38bd709",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first  number \n",
+            "12\n",
+            "enter the second  number \n",
+            "65\n",
+            "enter the Third  number \n",
+            "12\n",
+            "These 3 side 12,65,12 cant form a triangle\n"
           ]
         }
       ]
