--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYB7WbUBARnm3rn9VO3ByK",
+      "authorship_tag": "ABX9TyOB+1pwmTOM0xeByEYqXqu8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -429,7 +429,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +520,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,8 +555,7 @@
         "if side1 + side2 >=side3 and side2 + side3 >=side2 and side1 + side3 >= side2:\n",
         "  print(\"These 3 side {},{},{} can form a triangle\" .format(side1,side2,side3))\n",
         "else:\n",
-        "  print(\"These 3 side {},{},{} cant form a triangle\" .format(side1,side2,side3))\n",
-        ""
+        "  print(\"These 3 side {},{},{} cant form a triangle\" .format(side1,side2,side3))\n"
       ],
       "metadata": {
         "id": "52cQY1eMXY6w",
@@ -565,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,6 +577,264 @@
             "enter the Third  number \n",
             "12\n",
             "These 3 side 12,65,12 cant form a triangle\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "12.Print the number from 1 to using both for and while loop"
+      ],
+      "metadata": {
+        "id": "PBTOv56aqLq7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# While Loop\n",
+        "\n",
+        "num=1  #initiating variable starting\n",
+        "while num <11:   #checking for the condition\n",
+        "  print(num,end =' ' )\n",
+        "  num+=1   # incrementing the initial value"
+      ],
+      "metadata": {
+        "id": "FxqIXdvBqiz8",
+        "outputId": "28834588-a159-429f-ce3d-d534fd05a844",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 6 7 8 9 10 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# For Loop\n",
+        "\n",
+        "for num in range(1,11):\n",
+        "  print(num , end=' ')"
+      ],
+      "metadata": {
+        "id": "hYJpcAyisYBP",
+        "outputId": "454d4c39-a8cf-4cd5-fc2a-c7d24c159992",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 6 7 8 9 10 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "13. Write a program that displays even numbers 1 to 50 and\n",
+        "odd numbers 51 to 100 using a repeating loop."
+      ],
+      "metadata": {
+        "id": "fk8-z_5wuB-B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 1\n",
+        "while num <100:\n",
+        "  if num%2!=0:\n",
+        "    while num<50:\n",
+        "      if num%2==0:\n",
+        "        print(num,end=' ')\n",
+        "      num+=1\n",
+        "    print(num,end=' ')\n",
+        "  num+=1\n",
+        ""
+      ],
+      "metadata": {
+        "id": "zh8Av8SCst5v",
+        "outputId": "ac333fae-d1d8-41bf-b3eb-83d96890882b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 51 53 55 57 59 61 63 65 67 69 71 73 75 77 79 81 83 85 87 89 91 93 95 97 99 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "14. Create a program that prompts the user for a number and\n",
+        "displays the table of that number using a loop"
+      ],
+      "metadata": {
+        "id": "8yrshbj2w3ME"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using for loops\n",
+        "number = int(input(\"enter the number  \\n\"))\n",
+        "for i in range(1,11):\n",
+        "  print(f\"{i} x = {i*number}\")\n",
+        "print('-'*20 )\n",
+        "# using while Loops\n",
+        "i=1 #initiating counter var\n",
+        "while i <=10:\n",
+        "  print(f\"{i} x = {i*number}\")\n",
+        "  i+=1\n",
+        "\n",
+        "# Table from 1 to 10 withput user prompt\n",
+        "for i in range(1,11):\n",
+        "  for j in range(1,11):\n",
+        "    print(f'{i} x {j} = {i*j}')\n",
+        "  print('-'*30)"
+      ],
+      "metadata": {
+        "id": "oYBgBmFQwCBc",
+        "outputId": "25b9f03e-b070-4e3a-b23a-b1b26ccc8483",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number  \n",
+            "5\n",
+            "1 x = 5\n",
+            "2 x = 10\n",
+            "3 x = 15\n",
+            "4 x = 20\n",
+            "5 x = 25\n",
+            "6 x = 30\n",
+            "7 x = 35\n",
+            "8 x = 40\n",
+            "9 x = 45\n",
+            "10 x = 50\n",
+            "--------------------\n",
+            "1 x = 5\n",
+            "2 x = 10\n",
+            "3 x = 15\n",
+            "4 x = 20\n",
+            "5 x = 25\n",
+            "6 x = 30\n",
+            "7 x = 35\n",
+            "8 x = 40\n",
+            "9 x = 45\n",
+            "10 x = 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "15. Write a program that calculates and displays the sum of\n",
+        "even numbers from 1 to 100 using a repeating loop."
+      ],
+      "metadata": {
+        "id": "dDrBBLk21Lw1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "sum_= 0\n",
+        "i=1\n",
+        "while i <=100:\n",
+        "  if i%2==0:\n",
+        "    sum_+=i\n",
+        "  i+=1\n",
+        "print(\"The sum of even number between 1 and 100 is---->\",sum_)"
+      ],
+      "metadata": {
+        "id": "O1o_SUDK0Uf8",
+        "outputId": "7d22df43-c803-45fb-faf2-562e7a9232b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of even number between 1 and 100 is----> 2550\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "16. Write a program that prompts the user for two numbers A\n",
+        "and B and displays all numbers between A and B."
+      ],
+      "metadata": {
+        "id": "mpi7iYu66zv1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"enter the first number \\n\"))\n",
+        "num2 = int(input(\"enter the second  number \\n\"))\n",
+        "\n",
+        "start = min(num1,num2)\n",
+        "end_ = max(num1,num2)\n",
+        "for i in range(start+1,end_):\n",
+        "  print(i,end=' ')\n"
+      ],
+      "metadata": {
+        "id": "uBJ-abhs61mV",
+        "outputId": "c48d54a1-6f37-44a0-dc09-18b269c30178",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first number \n",
+            "45\n",
+            "enter the second  number \n",
+            "32\n",
+            "33 34 35 36 37 38 39 40 41 42 43 44 "
           ]
         }
       ]
