--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOB+1pwmTOM0xeByEYqXqu8",
+      "authorship_tag": "ABX9TyNbtd2xiYrQ7e2zQaxN8M+c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +633,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,8 +665,7 @@
         "        print(num,end=' ')\n",
         "      num+=1\n",
         "    print(num,end=' ')\n",
-        "  num+=1\n",
-        ""
+        "  num+=1\n"
       ],
       "metadata": {
         "id": "zh8Av8SCst5v",
@@ -675,7 +674,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,7 +722,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,7 +823,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,6 +837,127 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "17. Write a Python Program to Check Armstrong Number?\n",
+        "\n",
+        "For example, let's consider the number 153:\n",
+        "It has three digits (1, 5, and 3).\n",
+        "\n",
+        "If we calculate 1^3 + 5^3 +3^3  , we get , which is equal to .\n",
+        "\n",
+        "So, 153 is an Armstrong number because it equals the sum of its digits raised to the power\n",
+        "of the number of digits in the number"
+      ],
+      "metadata": {
+        "id": "EaMsA7p6zCOC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number=int(input(\"enter the number \\n\"))   #153\n",
+        "total = 0       #initiate Total\n",
+        "temp = number     #temp=153  Store the original number in a temporary variable\n",
+        "while temp>0:       #checking the condition\n",
+        "  digit = temp%10   #153%10 = 3  Extract the last digit of temp\n",
+        "  cube= digit**3       #3^3=27\n",
+        "  total+=cube           #0+27=27\n",
+        "  temp = temp//10        #updating temp variable  temp = 153/10 = 15 Remove the last digit from temp\n",
+        "if total==number:\n",
+        "  print(\"Its an Armstrong Number\")\n",
+        "else:\n",
+        "  print(\"Its not an Armstrong Number\")"
+      ],
+      "metadata": {
+        "id": "5EfZqTCRzSMT",
+        "outputId": "5a70c883-c043-40e2-bf43-b29daea90e1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "370\n",
+            "Its an Armstrong Number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "18. Write a Python Program to Find Armstrong Number in an Interval."
+      ],
+      "metadata": {
+        "id": "bMb8yf_M7C3A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lower = int(input(\"Enter the lower limit of the interval: \"))\n",
+        "upper = int(input(\"Enter the upper limit of the interval: \"))\n",
+        "for num in range(lower, upper + 1):  # Iterate through the numbers in the given interval\n",
+        "    temp_num = num\n",
+        "    total = 0\n",
+        "    while temp_num > 0:            # Loop through each digit of the number\n",
+        "        digit = temp_num % 10         # Extract the last digit of temp_num\n",
+        "        cube = digit ** 3                # Calculate the cube of the digit\n",
+        "        total += cube                      # Add the cube of the digit to the total\n",
+        "        temp_num //= 10                      # Remove the last digit from temp_num\n",
+        "    if total == num:                           # Check if the number is an Armstrong number\n",
+        "        print(num)\n"
+      ],
+      "metadata": {
+        "id": "lSkvc-Ug7oyT",
+        "outputId": "9d6d27eb-6ac9-4e2e-b1c2-050e92a20c4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the lower limit of the interval: 1\n",
+            "Enter the upper limit of the interval: 500\n",
+            "1\n",
+            "153\n",
+            "370\n",
+            "371\n",
+            "407\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Eupdycl89hop"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
