--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbtd2xiYrQ7e2zQaxN8M+c",
+      "authorship_tag": "ABX9TyMGNlsFxAE3mjXM5q5J2L2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -878,7 +878,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +923,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,13 +951,165 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "19. Write a Python Program to find largest element in an array."
+      ],
       "metadata": {
-        "id": "Eupdycl89hop"
+        "id": "5X8L_pvgHjxs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_array = [10, 20, 30, 99]\n",
+        "\n",
+        "def largest_num():\n",
+        "  for num in my_array:\n",
+        "    return max(my_array)\n",
+        "print(largest_num())\n"
+      ],
+      "metadata": {
+        "id": "Eupdycl89hop",
+        "outputId": "5d4672d3-fa78-4d52-816d-2a4715ec5c5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "99\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_array = [10, 20, 30, 99]\n",
+        "largest_ = my_array[0]\n",
+        "def largest_number():\n",
+        "  largest_ = my_array[0]\n",
+        "  for num in my_array:\n",
+        "    if num>largest_:\n",
+        "        largest_ =num\n",
+        "    else:\n",
+        "        largest_=largest_\n",
+        "  return largest_\n",
+        "print(largest_number())"
+      ],
+      "metadata": {
+        "id": "hu6xAZYIIaPc",
+        "outputId": "fe889dfe-cd6b-4bda-aadf-39b7e48e5b15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "99\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "20. Write a Python Program for array rotation."
+      ],
+      "metadata": {
+        "id": "gALchHYKJjzD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rotate_array(arr, d):\n",
+        "    n = len(arr)\n",
+        "\n",
+        "    # Check if 'd' is valid, it should be within the range of array length\n",
+        "    if d < 0 or d >= n:\n",
+        "        print(\"Invalid rotation value\")\n",
+        "\n",
+        "    return arr[-d:] + arr[:-d]\n",
+        "\n",
+        "arr = [1, 2, 3, 4, 5]\n",
+        "d = 1\n",
+        "rotated_arr = rotate_array(arr, d)\n",
+        "print(\"Original array:\", arr)\n",
+        "print(\"Rotated array:\", rotated_arr)"
+      ],
+      "metadata": {
+        "id": "ylbfpcy_JnEA",
+        "outputId": "f3f1a58f-bb3d-45ca-c517-d26bcaf12f26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original array: [1, 2, 3, 4, 5]\n",
+            "Rotated array: [5, 1, 2, 3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "21. Write a Python Program to Split the array and add the first part to the end?"
+      ],
+      "metadata": {
+        "id": "rZWvxjp1NeZa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = list(range(7))\n",
+        "n=len(arr)\n",
+        "k = int(input())\n",
+        "def first_last(arr,k):\n",
+        "  if k<=0 or k> n:\n",
+        "    return arr\n",
+        "  first=arr[:k]\n",
+        "  last = arr[k:]\n",
+        "  return last + first\n",
+        "final =(first_last(arr,k))\n",
+        "print(\"initial array\",arr)\n",
+        "print('Final Array',final)"
+      ],
+      "metadata": {
+        "id": "08CnEFasNgfQ",
+        "outputId": "331346f6-40b9-4c4b-8361-d42867a1f737",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "87\n",
+            "initial array [0, 1, 2, 3, 4, 5, 6]\n",
+            "Final Array [0, 1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ]
     }
   ]
 }
