--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGNlsFxAE3mjXM5q5J2L2u",
+      "authorship_tag": "ABX9TyOTHycmRjyc6G41GpHXpz1c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -686,6 +686,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "num = 1\n",
+        "while num<100:\n",
+        "  if num<50:\n",
+        "    if num %2!=0:\n",
+        "      print(num,end=' ')\n",
+        "  else:\n",
+        "    if num%2==0:\n",
+        "      print(num,end=' ')\n",
+        "\n",
+        "\n",
+        "  num+=1"
+      ],
+      "metadata": {
+        "id": "7Bp8OrN1OWKz",
+        "outputId": "1fdab389-8634-4555-99e5-7adb4bf8c058",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 31 33 35 37 39 41 43 45 47 49 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 "
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "14. Create a program that prompts the user for a number and\n",
@@ -976,7 +1009,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1042,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1087,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1098,7 +1131,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,6 +1140,90 @@
             "87\n",
             "initial array [0, 1, 2, 3, 4, 5, 6]\n",
             "Final Array [0, 1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "22. Write a program that asks the user for a number N and\n",
+        "says whether it is prime or not."
+      ],
+      "metadata": {
+        "id": "LvlUou_wVKAZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"enter any number\"))\n",
+        "if num ==1:\n",
+        "  print(\"This is not prime\")\n",
+        "elif num==2:\n",
+        "  print(\"Its a prime\")\n",
+        "\n",
+        "else:\n",
+        "   if num > 2 :\n",
+        "    for i in range(2,num):\n",
+        "      if num % i ==0 :\n",
+        "          print(\"Not a prime\")\n",
+        "          break\n",
+        "\n",
+        "    else:\n",
+        "        print(\"Its a prime\")"
+      ],
+      "metadata": {
+        "id": "FRSApUrzVGGG",
+        "outputId": "05ff59d6-c5c3-4044-9e85-6f202d7c7804",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter any number45\n",
+            "Not a prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"enter the number \\n\"))\n",
+        "if num==1:\n",
+        "  print(\"Its not a prime Number\")\n",
+        "elif num==2:\n",
+        "  print(\"Its prime Number\")\n",
+        "else:\n",
+        "  for i in range(2,num):\n",
+        "    if num%i==0:\n",
+        "      print('Its not prime')\n",
+        "      break\n",
+        "  else:\n",
+        "      print('Its prime')"
+      ],
+      "metadata": {
+        "id": "zawEBKOTWFeQ",
+        "outputId": "656e4736-4e98-4871-fe41-80a721d10589",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "47\n",
+            "Its prime\n"
           ]
         }
       ]
