--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTHycmRjyc6G41GpHXpz1c",
+      "authorship_tag": "ABX9TyOGoIy1gS1cyqvVWGVsQrKI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -707,7 +707,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,44 +1157,6 @@
     {
       "cell_type": "code",
       "source": [
-        "num = int(input(\"enter any number\"))\n",
-        "if num ==1:\n",
-        "  print(\"This is not prime\")\n",
-        "elif num==2:\n",
-        "  print(\"Its a prime\")\n",
-        "\n",
-        "else:\n",
-        "   if num > 2 :\n",
-        "    for i in range(2,num):\n",
-        "      if num % i ==0 :\n",
-        "          print(\"Not a prime\")\n",
-        "          break\n",
-        "\n",
-        "    else:\n",
-        "        print(\"Its a prime\")"
-      ],
-      "metadata": {
-        "id": "FRSApUrzVGGG",
-        "outputId": "05ff59d6-c5c3-4044-9e85-6f202d7c7804",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter any number45\n",
-            "Not a prime\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "num = int(input(\"enter the number \\n\"))\n",
         "if num==1:\n",
         "  print(\"Its not a prime Number\")\n",
@@ -1215,7 +1177,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,6 +1186,167 @@
             "enter the number \n",
             "47\n",
             "Its prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num= int(input(\"please enter the number \\n\"))\n",
+        "def check_prime(num):\n",
+        "  if num==1:\n",
+        "    return 'Its not a prime'\n",
+        "  elif num==2:\n",
+        "    return 'Its a prime'\n",
+        "  else:\n",
+        "    for i in range(2,num):\n",
+        "      if num%i==0:\n",
+        "        return 'Its not a prime'\n",
+        "        break\n",
+        "    else:\n",
+        "      return 'Its a Prime'\n",
+        "\n",
+        "final=check_prime(num)\n",
+        "print(final)"
+      ],
+      "metadata": {
+        "id": "RCMwL0o-qkoV",
+        "outputId": "10c38696-1574-48be-ea6a-66dda5009b04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the number \n",
+            "17\n",
+            "Its a Prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "23. Create a program that displays the first N first perfect\n",
+        "squares, where N is informed by the user, using a loop."
+      ],
+      "metadata": {
+        "id": "tf8MIk5ytMlG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n =int(input(\"enter the number \\n\"))\n",
+        "num=1\n",
+        "count=0\n",
+        "while count<n:\n",
+        "  square = num**2\n",
+        "  print(square,end=' ')\n",
+        "  count+=1\n",
+        "  num+=1"
+      ],
+      "metadata": {
+        "id": "ZDAc0R1CtVP-",
+        "outputId": "ec794b54-9699-4b94-d7a7-b5272c4560da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "6\n",
+            "1 4 9 16 25 36 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "24. Write a program that prompts the user for a sentence and\n",
+        "displays the number of vowels in the sentence."
+      ],
+      "metadata": {
+        "id": "DxwgM6yevpyS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = input(\"please enter any word \\n \")\n",
+        "vowel_count=0\n",
+        "words = words.lower()\n",
+        "for word in words:\n",
+        "  if word in 'aeiou':\n",
+        "    vowel_count+=1\n",
+        "print(\"The number of vowles present in words is\",vowel_count)\n"
+      ],
+      "metadata": {
+        "id": "t3nkt8vzvrU2",
+        "outputId": "fc383c0a-e02f-4f44-fcfc-dbba4e79470d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter any word \n",
+            " Ankit Chauhan\n",
+            "The number of vowles present in words is 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "25. Write a program that prompts the user for a number and\n",
+        "displays its divisors"
+      ],
+      "metadata": {
+        "id": "uaxvoqD8wzgc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number=int(input(\"enter the number \\n\"))\n",
+        "for num in range(1,number+1):\n",
+        "  if number % num==0:\n",
+        "    print(num,end=' ')\n"
+      ],
+      "metadata": {
+        "id": "JGIGEvE-w2Ds",
+        "outputId": "e31a792c-53ae-444c-ac66-80f53c02293b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number \n",
+            "15\n",
+            "1 3 5 15 "
           ]
         }
       ]
