--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGoIy1gS1cyqvVWGVsQrKI",
+      "authorship_tag": "ABX9TyNe+G8tJetTUzOg+C1X3bpU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1217,7 +1217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1226,6 +1226,51 @@
             "please enter the number \n",
             "17\n",
             "Its a Prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prime number between ranges\n",
+        "lower_limit=int(input())\n",
+        "upper_limit =int(input())\n",
+        "for num in range (lower_limit,upper_limit+1):\n",
+        "      if num ==1:\n",
+        "        print(\"1 its not a prime number\")\n",
+        "      elif num > 1:\n",
+        "        for i in range (2,num):\n",
+        "          if num % i ==0:\n",
+        "            break\n",
+        "        else:\n",
+        "          print(num)"
+      ],
+      "metadata": {
+        "id": "msYbrxErtPo6",
+        "outputId": "4b2136cb-bc96-4dd4-d88b-bfedb3d4ffcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "25\n",
+            "1 its not a prime number\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n"
           ]
         }
       ]
@@ -1259,7 +1304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,7 +1345,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,7 +1383,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1347,6 +1392,133 @@
             "enter the number \n",
             "15\n",
             "1 3 5 15 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "26. Write a Python Program to Find LCM."
+      ],
+      "metadata": {
+        "id": "uPWS-ys-uDZo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=int(input())     #54\n",
+        "y=int(input())     #72\n",
+        "def chcek_lcm(x,y):\n",
+        "  max_=max(x,y)    #max=72\n",
+        "  multiple = max_     #multiple =72\n",
+        "  while True:\n",
+        "    if multiple% x==0 and multiple %y==0:     #check 72%54==0(no) 72%72==0 (yes)  soo condition didnt setisfy\n",
+        "      return multiple\n",
+        "    else:\n",
+        "      multiple+=max_                        #soo condition didnt setisfy it comes in else where it upade value of multiple =144 and then check again\n",
+        "final=chcek_lcm(x,y)\n",
+        "\n",
+        "print(f\"The lcm of {x},{y} is {final}\")"
+      ],
+      "metadata": {
+        "id": "en7zIYWluIFr",
+        "outputId": "bcea6fa4-cb2f-458a-89c1-c909d1e73845",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "215\n",
+            "The lcm of 25,215 is 1075\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "27. Find the Hcf of 2 number"
+      ],
+      "metadata": {
+        "id": "hwglYoZK1XPO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hcf(x, y):\n",
+        "    while y:\n",
+        "        x, y = y, x % y  # 24,36 = 36,24%36\n",
+        "    return x\n",
+        "\n",
+        "# Test the function\n",
+        "num1 = int(input(\"Enter first number: \"))\n",
+        "num2 = int(input(\"Enter second number: \"))\n",
+        "\n",
+        "print(\"The HCF of\", num1, \"and\", num2, \"is\", hcf(num1, num2))\n"
+      ],
+      "metadata": {
+        "id": "N2qzlUu31WbT",
+        "outputId": "521f1d89-bb89-4451-e78d-6fd6d8ca30a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 24\n",
+            "Enter second number: 36\n",
+            "The HCF of 24 and 36 is 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define a function\n",
+        "def compute_hcf(x, y):\n",
+        "# choose the smaller number\n",
+        " if x > y:\n",
+        "  smaller = y\n",
+        " else:\n",
+        "  smaller = x\n",
+        " for i in range(1, smaller+1):\n",
+        "  if((x % i == 0) and (y % i == 0)):\n",
+        "    hcf = i\n",
+        " return hcf\n",
+        "num1 = int(input('Enter the number: '))\n",
+        "num2 = int(input('Enter the number: '))\n",
+        "print(\"The H.C.F. is\", compute_hcf(num1, num2))"
+      ],
+      "metadata": {
+        "id": "VZ60IqU-2PSk",
+        "outputId": "dbe29ae6-672d-4fdc-911d-8e54f42bbe17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 24\n",
+            "Enter the number: 36\n",
+            "The H.C.F. is 12\n"
           ]
         }
       ]
